--- a/style.css
+++ b/style.css
@@ -103,3 +103,40 @@ h2 {
     text-align: right;
     font-weight: 900;
  }
+
+ .signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 75px;
+ }
+
+ .signup-container {
+    background-color: #3882f6;
+    color: white;
+    border-radius: 10px;
+    padding: 60px 130px;
+    display: flex;
+    align-items: center;
+ }
+
+h3, .signup-container div p {
+    margin: 0;
+}
+
+.signup-two {
+    background-color: #3882f6;
+    color: white;
+    border: 2px solid white;
+    border-radius: 7px;
+    padding: 6px 25px;
+    height: 30px;
+    margin-left: 60px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+}
